<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="contact_s_picture">Contact\'s Picture</string>
    <string name="add">ADD</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_picture_with_camera">Take picture with camera</string>
    <string name="cancel">Cancel</string>
    <string name="fullName"> %s %s</string>
    <string name="AdapterFullName"> %s %s</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Edit</string>
    <string name="create_fragment_save_button">Save</string>


</resources>